--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,8 @@ dist.jar=${dist.dir}/BoumApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.fontawesomefx-8.91.jar=lib/fontawesomefx-8.91.jar
-file.reference.fontawesomefx-commons-9.1.2.jar=lib/fontawesomefx-commons-9.1.2.jar
-file.reference.fontawesomefx-controls-9.1.2.jar=lib/fontawesomefx-controls-9.1.2.jar
-file.reference.jfoenix-8.0.4.jar=lib/jfoenix-8.0.4.jar
-file.reference.jvxfx.jar=lib/jvxfx.jar
+file.reference.fontawesomefx-8.91.jar=lib\\fontawesomefx-8.91.jar
+file.reference.jfoenix-8.0.4.jar=lib\\jfoenix-8.0.4.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -41,10 +38,7 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.jfoenix-8.0.4.jar}:\
-    ${file.reference.fontawesomefx-commons-9.1.2.jar}:\
-    ${file.reference.fontawesomefx-controls-9.1.2.jar}:\
-    ${file.reference.fontawesomefx-8.91.jar}:\
-    ${file.reference.jvxfx.jar}
+    ${file.reference.fontawesomefx-8.91.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
