--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,8 +30,10 @@ dist.jar=${dist.dir}/BoumApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.charm-glisten-4.4.1.jar=lib\\charm-glisten-4.4.1.jar
 file.reference.fontawesomefx-8.91.jar=lib\\fontawesomefx-8.91.jar
 file.reference.jfoenix-8.0.4.jar=lib\\jfoenix-8.0.4.jar
+file.reference.jvxfx-1.0.jar=lib\\jvxfx-1.0.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -40,7 +42,9 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.jfoenix-8.0.4.jar}:\
     ${file.reference.fontawesomefx-8.91.jar}:\
-    ${libs.hibernate4-persistence.classpath}
+    ${libs.hibernate4-persistence.classpath}:\
+    ${file.reference.jvxfx-1.0.jar}:\
+    ${file.reference.charm-glisten-4.4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
