--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,14 +31,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.charm-glisten-4.4.1.jar=lib\\charm-glisten-4.4.1.jar
+file.reference.classmate-0.8.0.jar=lib\\classmate-0.8.0.jar
 file.reference.derby.jar=lib\\derby.jar
 file.reference.derbyclient.jar=lib\\derbyclient.jar
 file.reference.fontawesomefx-8.91.jar=lib\\fontawesomefx-8.91.jar
 file.reference.fontawesomefx-commons-8.15.jar=lib\\fontawesomefx-commons-8.15.jar
 file.reference.fontawesomefx-fontawesome-4.7.0-5.jar=lib\\fontawesomefx-fontawesome-4.7.0-5.jar
 file.reference.fontbox-2.0.4.jar=lib\\fontbox-2.0.4.jar
+file.reference.jandex-1.0.3.final.jar=lib\\jandex-1.0.3.final.jar
 file.reference.jfoenix-8.0.4.jar=lib\\jfoenix-8.0.4.jar
 file.reference.jvxfx-1.0.jar=lib\\jvxfx-1.0.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=lib\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -54,7 +57,10 @@ javac.classpath=\
     ${file.reference.fontawesomefx-fontawesome-4.7.0-5.jar}:\
     ${file.reference.derby.jar}:\
     ${file.reference.derbyclient.jar}:\
-    ${file.reference.fontbox-2.0.4.jar}
+    ${file.reference.fontbox-2.0.4.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.jandex-1.0.3.final.jar}:\
+    ${file.reference.classmate-0.8.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
