--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,6 +4,9 @@ do.depend=false
 do.jar=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
+file.reference.classmate-0.8.0.jar=C:\\Users\\lyess\\Documents\\NetBeansProjects\\BoumApp\\lib\\nblibraries.properties
+file.reference.jandex-1.0.3.final.jar=C:\\Users\\lyess\\Documents\\NetBeansProjects\\BoumApp\\lib\\fontbox-2.0.4.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\lyess\\Documents\\NetBeansProjects\\BoumApp\\lib\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46-bin.jar
 javac.debug=true
 javadoc.preview=true
 javafx.run.as=standalone
