--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,12 +4,12 @@ do.depend=false
 do.jar=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
-file.reference.classmate-0.8.0.jar=C:\\Users\\lyess\\Documents\\NetBeansProjects\\BoumApp\\lib\\nblibraries.properties
-file.reference.jandex-1.0.3.final.jar=C:\\Users\\lyess\\Documents\\NetBeansProjects\\BoumApp\\lib\\fontbox-2.0.4.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\lyess\\Documents\\NetBeansProjects\\BoumApp\\lib\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46-bin.jar
+file.reference.classmate-0.8.0.jar=C:\\Users\\Ouadie\\Documents\\NetBeansProjects\\BoumApp\\lib\\classmate-0.8.0.jar
+file.reference.jandex-1.0.3.final.jar=C:\\Users\\Ouadie\\Documents\\NetBeansProjects\\BoumApp\\lib\\jandex-1.0.3.final.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\Ouadie\\Documents\\NetBeansProjects\\BoumApp\\lib\\mysql-connector-java-5.1.23-bin.jar
 javac.debug=true
 javadoc.preview=true
 javafx.run.as=standalone
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Mozilla Firefox\\firefox.exe
-user.properties.file=C:\\Users\\lyess\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Ouadie\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
