--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ file.reference.fontawesomefx-8.91.jar=lib\\fontawesomefx-8.91.jar
 file.reference.fontawesomefx-commons-8.15.jar=lib\\fontawesomefx-commons-8.15.jar
 file.reference.fontawesomefx-fontawesome-4.7.0-5.jar=lib\\fontawesomefx-fontawesome-4.7.0-5.jar
 file.reference.fontbox-2.0.4.jar=lib\\fontbox-2.0.4.jar
+file.reference.itextpdf-5.1.0.jar=lib\\itextpdf-5.1.0.jar
 file.reference.jandex-1.0.3.final.jar=lib\\jandex-1.0.3.final.jar
 file.reference.jfoenix-8.0.4.jar=lib\\jfoenix-8.0.4.jar
 file.reference.jvxfx-1.0.jar=lib\\jvxfx-1.0.jar
@@ -60,7 +61,8 @@ javac.classpath=\
     ${file.reference.fontbox-2.0.4.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${file.reference.jandex-1.0.3.final.jar}:\
-    ${file.reference.classmate-0.8.0.jar}
+    ${file.reference.classmate-0.8.0.jar}:\
+    ${file.reference.itextpdf-5.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
